--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon index.ts",
     "migrate:make": "knex migrate:make",
     "migrate:latest": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
     "seed:make": "knex seed:make",
     "seed:run": "knex seed:run",
     "lint": "eslint . --ext .ts --fix" 
