--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon index.ts",
-    "migrate:make": "knex migrate:make",
-    "migrate:latest": "knex migrate:latest",
-    "migrate:rollback": "knex migrate:rollback",
-    "seed:make": "knex seed:make",
-    "seed:run": "knex seed:run",
+    "dev": "nodemon src/index.ts",
+    "migrate:make": "knex migrate:make --knexfile src/knexfile.ts",
+    "migrate:latest": "knex migrate:latest --knexfile src/knexfile.ts",
+    "migrate:rollback": "knex migrate:rollback --knexfile src/knexfile.ts",
+    "seed:make": "knex seed:make --knexfile src/knexfile.ts",
+    "seed:run": "knex seed:run --knexfile src/knexfile.ts",
     "lint": "eslint . --ext .ts --fix"
   },
   "keywords": [],
