--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
+    "jsdoc": "^4.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
