--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "winston": "^3.11.0",
@@ -37,6 +38,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/knex": "^0.16.1",
+    "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "eslint": "^8.56.0",
