--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "migrate:latest": "knex migrate:latest --knexfile data/knexfile.ts",
     "migrate:rollback": "knex migrate:rollback --knexfile src/knexfile.ts",
     "seed:make": "knex seed:make --knexfile src/knexfile.ts",
-    "seed:run": "knex seed:run --knexfile src/knexfile.ts",
+    "seed:run": "knex seed:run --knexfile data/knexfile.ts",
     "lint": "eslint . --ext .ts --fix"
   },
   "keywords": [],
