--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,5 +110,5 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/**/*", "data/migrations/20240829141549_newTables.ts"]
+  "include": ["src/**/*"]
 }
